# Sandbox

./: .gitignore
backend/: CMakeLists.txt  config.h  ff_base_inference.c  ff_base_inference.h  ff_inference_impl.c  ff_inference_impl.h  ff_list.c  ff_list.h  ff_pre_proc.c  ff_proc_factory.c  ff_proc_factory.h  image.c  image.h  image_inference.c  image_inference.h  image_inference_async_preproc.c  image_inference_async_preproc.h  inference_impl.c  inference_impl.h  logger.c  logger.h  metaconverter.c  metaconverter.h  model_proc.c  model_proc.h  openvino_image_inference.c  openvino_image_inference.h  pre_proc.c  pre_proc.h  pre_proc_mocker.c  pre_proc_swscale.c  pre_proc_vaapi.c  queue.c  queue.h  safe_queue.c  safe_queue.h  test_main.c
backend/dldt_c_api/: CMakeLists.txt  ie_api_impl.cpp  ie_c_api.cpp
backend/dldt_c_api/include/: ie_c_api.h
backend/dldt_c_api/test/: CMakeLists.txt  main.cpp  test.h
backend/docker/: Dockerfile  build_docker_image.sh
dldt-c_api/: README.md  ie_c_api.cpp
ffmpeg-media-analytics/: CMakeLists.txt
ffmpeg-media-analytics/ie_wrapper/: ff_base_inference.cpp  ff_base_inference.h  ie_wrapper.cpp  inference_impl.cpp  inference_impl.h
ffmpeg-media-analytics/ie_wrapper/include/: ie_meta.h  ie_wrapper.h
ffmpeg-media-analytics/ie_wrapper/proc_factory/: detect_proc.cpp  proc_factory.cpp  proc_factory.h
ffmpeg-media-analytics/inference_backend/pre_proc/vaapi/: vaapi_vpp.h
ffmpeg-media-analytics/library_config/: ie_wrapper.pc.in
ffmpeg-media-analytics/tests/: main.cpp
ffmpeg-patches/: 0019-Face-reidentification-refine.patch  0020-New-detect-filter-based-on-ie-wrapper.patch  TEST0021-Introduce-image-inference-backend.patch  TEST0022-IE-detect-filter-based-on-image-inference-backend.patch
ffmpeg-patches/header/: 0001-FFmpeg-header-changes-on-v4.1.patch
jansson-example/: CMakeLists.txt  meta_json.c
openvino-c_api/: CMakeLists.txt  build.sh  clean_up.sh
openvino-c_api/include/: ie_api_wrapper.h  ie_common_wrapper.h
openvino-c_api/library_config/: dldt.pc.in
openvino-c_api/src/: ie_api_wrapper.cpp  ie_context.cpp  ie_context.h
openvino-c_api/src/ie_c_wrapper/: ie_api_wrapper.cpp  ie_context.cpp  ie_context.h
openvino-c_api_v2.0/: CMakeLists.txt  README.md
openvino-c_api_v2.0/cmake/: config.h.in
openvino-c_api_v2.0/ie_wrapper/: CMakeLists.txt  ff_base_inference.cpp  ff_base_inference.h  inference_impl.cpp  inference_impl.h
openvino-c_api_v2.0/ie_wrapper/proc_factory/: detect_proc.cpp  proc_factory.h
openvino-c_api_v2.0/include/: ie_api_wrapper.h
openvino-c_api_v2.0/inference_backend/: CMakeLists.txt
openvino-c_api_v2.0/inference_backend/image_inference/openvino/: CMakeLists.txt  openvino_image_inference.cpp  openvino_image_inference.h
openvino-c_api_v2.0/inference_backend/include/inference_backend/: image.h  image_inference.h  logger.h  pre_proc.h
openvino-c_api_v2.0/inference_backend/pre_proc/: CMakeLists.txt  pre_proc.cpp
openvino-c_api_v2.0/inference_backend/pre_proc/gapi/: CMakeLists.txt  gapi_pre_proc.cpp  gapi_pre_proc.h
openvino-c_api_v2.0/inference_backend/pre_proc/opencv/: CMakeLists.txt  opencv_pre_proc.cpp  opencv_pre_proc.h
openvino-c_api_v2.0/inference_backend/pre_proc/opencv_utils/: CMakeLists.txt  opencv_utils.cpp  opencv_utils.h
openvino-c_api_v2.0/inference_backend/pre_proc/vaapi/: vaapi_vpp.cpp
openvino-c_api_v2.0/library_config/: dldt.pc.in
openvino-c_api_v2.0/src/ie_c_wrapper/: ie_context.h
openvino-c_api_v2.0/tests/: CMakeLists.txt  main.cpp  test.h
openvino-samples/: build_samples.sh
openvino-samples-r2/benchmark_app/: README.md  benchmark_app.hpp  main.cpp
openvino-samples-r2/python_samples/benchmark_app/: README.md
openvino-samples-r2/python_samples/benchmark_app/benchmark/: benchmark.py
openvino-samples-r2/python_samples/benchmark_app/benchmark/utils/: inputs_filling.py  parameters.py  utils.py
openvino-samples/human_pose_estimation_demo/src/: human_pose_estimator.cpp
openvino-samples/multichannel_demo/fd/: README.md
openvino-samples/multichannel_demo/hpe/: README.md
openvino-samples/python_samples/3d_segmentation_demo/: README.md
openvino-samples/python_samples/affinity_setting_demo/: README.md
openvino-samples/python_samples/dynamic_batch_demo/: README.md
tools/: grab-links.py
